Add new schema syntax
Added a new IDL syntax, with namespace and main schema declarations, as
equivalent of an Avro Schema file. Includes inspection to suggest using
it instead of a message-less protocol.